@@ -1,5 +1,14 @@
 2000-02-09  Akim Demaille  <akim@epita.fr>
 
+	Avoid outputting `config_files' code in `config.status' if there
+	are none.
+
+	* acgeneral.m4 (AC_OUTPUT): Don't register $1 to `AC_CONFIG_FILES'
+	if $1 is empty.
+	Normalize the names of the sections in `config.status --help'.
+
+2000-02-09  Akim Demaille  <akim@epita.fr>
+
 	* README-alpha: New file, based on Automake's.
 	* Makefile.am: Tuned.
 
